--- a/README
+++ b/README
@@ -1,1 +1,12 @@
-This is a fun project don't expect anything from it!
+aeq
+===
+
+aeq is a simple interactive and interpreted language.
+aeq have one language feature variables.
+In aeq there is one type a 64-bit float.
+aeq only works with number, it is more a interactive calculator then a language.
+```
+x = 5 * 3.5
+z = x + 6
+y = z*(x+1/5000)
+´´´
